k8s-security-framework/policies/pod-security/KSP-POD-010/tests/boundary-pass-additional-edge-case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-010-boundary-localhost-additional-boundary-pass
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: profiles/demo-api.json
