k8s-security-framework/policies/pod-security/KSP-POD-010/tests/exception-policy-for-specific-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: require-seccomp-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: require-seccomp
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name in ['ksp-pod-010-exception', 'ksp-pod-010-exception-secondary',
      'ksp-pod-010-exception-tertiary'] && object.metadata.namespace == 'policy-test'
