k8s-security-framework/policies/pod-security/KSP-POD-010/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-010-exception
  namespace: policy-test
spec:
  securityContext:
    seccompProfile:
      type: Unconfined
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-010-exception-secondary
  namespace: policy-test
spec:
  securityContext:
    seccompProfile:
      type: Unconfined
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-010-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: secure
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      seccompProfile:
        type: Unconfined
    command:
    - sh
