k8s-security-framework/policies/pod-security/KSP-POD-010/tests/negative-pod-default-with-container-unconfined-overrides.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-010-negative-pod-default-regular-override
  namespace: policy-test
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: app
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      seccompProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-010-negative-pod-default-init-override
  namespace: policy-test
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: app
    image: harbor.example.com/demo-api:1.0.0
  initContainers:
  - name: init
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      seccompProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-010-negative-pod-default-ephemeral-override
  namespace: policy-test
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: app
    image: harbor.example.com/demo-api:1.0.0
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    command: [sh]
    securityContext:
      seccompProfile:
        type: Unconfined
