k8s-security-framework/policies/pod-security/KSP-POD-010/tests/positive-pod-level-runtime-default-with-all-container-types.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-010-positive-pod-runtime-default
  namespace: policy-test
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
  initContainers:
    - name: init
      image: harbor.example.com/demo-api:1.0.0
  ephemeralContainers:
    - name: debugger
      image: harbor.example.com/demo-api:1.0.0
      command: ["sh"]
