k8s-security-framework/policies/pod-security/KSP-POD-010/tests/positive-two-containers-with-seccomp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-010-positive-two-container-seccomp
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        seccompProfile:
          type: RuntimeDefault
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: profiles/sidecar.json
